--- a/homepage/homepage.html
+++ b/homepage/homepage.html
@@ -11,7 +11,7 @@
         <div><a href="https://moodle.rose-hulman.edu/login/index.php">Moodle</a></div>
         <div><a href="https://login.pearson.com/v1/piapi/piui/signin?client_id=dN4bOBG0sGO9c9HADrifwQeqma5vjREy&okurl=https:%2F%2Fportal.mypearson.com%2Fcourse-home&siteid=8313">Pearson</a></div>
         <div><a href="https://mail.google.com/mail/u/0/#inbox">Gmail</a></div>
-        <div><a href="https://beta.protonmail.com/u/0/inbox">Gmail</a></div>
+        <div><a href="https://beta.protonmail.com/u/0/inbox">Protonmail</a></div>
     </body>
     
 
