Added home hyperlink

--- a/homepage/homepage.html
+++ b/homepage/homepage.html
@@ -5,6 +5,7 @@
         <title>Homepage</title>
     </head>
     <body>
+        <h2><a href="https://hverrill.github.io/">Home</a></h2>
         <h1>Homepage - Common Links</h1>
         <div><a href="https://roamresearch.com/#/app/edgeofthevoid/">Roam Research</a></div>
         <div><a href="https://rosehulman.sharepoint.com/sites/myrh">My Rose Hulman</a></div>
