Moved contact.html so page will load

--- a/contact/contact.html
+++ b/contact/contact.html
@@ -5,15 +5,12 @@
         <title>Contact Me</title>
     </head>
     <body>
-        <h2><a href="https://hverrill.github.io/">Home</a></h2>
         <h1>Contact me via:</h1>
         <div>Cell: (678)-994-9460</div>
-        <div><a href="mailto:verrilhn@rose-hulman.edu">Email</a></div>
-        <div>
-            Address:
-            5500 Wabash Avenue CM 2008 
-            Terre Haute, Indiana 47803 
-        </div>
+        <div>Email: <a href="mailto:verrilhn@rose-hulman.edu">verrilhn@rose-hulman.edu</a></div>
+        <div>Address:</div>
+        <div>5500 Wabash Avenue CM 2008</div>
+        <div>Terre Haute, Indiana 47803</div>
         <h2>For Senator Relations:</h2>
         <div><a href="https://discord.gg/KffQNuuZyw">Deming Senator Discord Server</a></div>
         <div><a href="https://groupme.com/join_group/62904435/o20xLcjO">Deming Senator Relations GroupMe</a></div>
