--- a/index.html
+++ b/index.html
@@ -3,11 +3,18 @@
     <head>
         <meta charset="utf-8">
         <title>Henry Verrill's Site</title>
+        <link rel="stylesheet" href="public/styles/normalize.css">
+        <link rel="stylesheet" href="public/styles/main.css">
+        <link rel="icon" href="assets/favicon.png">
     </head>
     <body>
-        <h1>This is a WIP</h1>
-        <p>This will be updated as I learn more html, css, and js.</p>
+        <div id="intro">Hello - I'm <b>Henry Verrill</b>. This is my work in progress online resume!</div>
+        <div id="aboutMe">Here's more about me...</div>
+        <div id="me">
+            <p>Here's a flattering photo of someone who may or may not be me...</p>
+            <img src="assets/me_big.png" alt="a funny hand-drawn, black and white head">
+        </div>
     </body>
-    
-
+    <script src="public/scripts/main.js"></script>
+    <style></style>
 </html>
