addd resume.html and restructured html a bit

--- a/index.html
+++ b/index.html
@@ -3,17 +3,37 @@
     <head>
         <meta charset="utf-8">
         <title>Henry Verrill's Site</title>
-        <link rel="stylesheet" href="public/styles/normalize.css">
-        <link rel="stylesheet" href="public/styles/main.css">
+        <link rel="stylesheet" href="styles/normalize.css">
+        <link rel="stylesheet" href="styles/main.css">
         <link rel="icon" href="assets/favicon.png">
     </head>
     <body>
-        <div id="intro">Hello - I'm <b>Henry Verrill</b>. This is my work in progress online resume!</div>
-        <div id="aboutMe">Here's more about me...</div>
-        <div id="me">
-            <p>Here's a flattering photo of someone who may or may not be me...</p>
-            <img src="assets/me_big.png" alt="a funny hand-drawn, black and white head">
-        </div>
+        <nav>
+            <!-- Potentially unneeded -->
+        </nav>
+        <main>
+            <div id="intro" class="big">
+                <h1>Hello - I'm <b>Henry Verrill</b>. This is my work in progress online resume!</h1>
+            </div>
+
+            <div id="aboutMe" class="medium">
+                <p>Here's more about me...</p>
+            </div>
+
+            <div id="me" class="small">
+                <p>Here's a flattering photo of someone who may or may not be me...</p>
+                <img src="assets/me_big.png" alt="a funny hand-drawn, black and white head">
+            </div>
+
+            <div id="resume" class="big">
+                <p>Click <a href="https://hverrill.github.io/resume.html">here</a> to view my resume.</p>
+            </div>
+        </main>
+        <footer>
+            <!-- also potentially unneeded -->
+            <div>You can contact me through the essence plane very easily.</div>
+        </footer>
+        
     </body>
     <script src="public/scripts/main.js"></script>
     <style></style>
