--- a/index.html
+++ b/index.html
@@ -8,23 +8,26 @@
         <link rel="icon" href="assets/favicon.png">
     </head>
     <body>
-        <nav>
+        <nav class="bar">
+            <div>-</div>
             <!-- Potentially unneeded -->
         </nav>
         <main>
+            <!-- The introduction. Says my name and a short one-liner -->
             <div id="intro" class="big">
-                <h1>Hello - I'm <b>Henry Verrill</b>. This is my work in progress online resume!</h1>
+                <p>Hello - I'm <b>Henry Verrill</b>. This is my work in progress online resume!</p>
             </div>
-
+            <!-- The about me. This talks a bit more about myself. -->
             <div id="aboutMe" class="medium">
                 <p>Here's more about me...</p>
             </div>
-
+            <!-- A photo. This one is a bit of an inside joke between my friends. 
+                To fufill the requirement for an image for the assignment -->
             <div id="me" class="small">
                 <p>Here's a flattering photo of someone who may or may not be me...</p>
                 <img src="assets/me_big.png" alt="a funny hand-drawn, black and white head">
             </div>
-
+            <!-- Link to the resume page. May relocate. -->
             <div id="resume" class="big">
                 <p>Click <a href="https://hverrill.github.io/resume.html">here</a> to view my resume.</p>
             </div>
