--- a/resume.html
+++ b/resume.html
@@ -13,7 +13,7 @@
         </nav>
         <main>
             <div id="resumePage" class="big">
-                <h1>My resume</h1>
+                <p>My resume</p>
             </div>
             <div id="pdf">
                 <embed src="assets/resume_color.pdf" type="application/pdf" width="100%" height="600px" />
