--- a/resume.html
+++ b/resume.html
@@ -11,15 +11,15 @@
         <nav>
             <!-- Potentially unneeded -->
         </nav>
-        <main>
+        <main class="main">
             <div id="resumePage" class="big">
                 <p>My resume</p>
             </div>
-            <div id="pdf">
-                <embed src="assets/resume_color.pdf" type="application/pdf" width="100%" height="600px" />
+            <div id="pdf" class="secondary">
+                <embed src="assets/resume_color.pdf" type="application/pdf" width="100%" height="800px" />
             </div>
         </main>
-        <footer>
+        <footer class="main">
             <!-- also potentially unneeded -->
             <div>You can contact me through the essence plane very easily.</div>
         </footer>
