added div to nav

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
         <link rel="icon" href="assets/favicon.png">
     </head>
     <body>
-        <nav class="bar"></nav>
+        <nav class="bar">
+            <div></div>
+        </nav>
         <main class="main">
             <!-- The introduction. Says my name and a short one-liner -->
             <div id="intro" class="header primary">
