css and html changes

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <main class="main">
             <!-- The introduction. Says my name and a short one-liner -->
             <div id="intro" class="header primary">
-                <p>Hello - I'm <b>Henry Verrill</b>. This is my work in progress online resume!</p>
+                <p>Hello - I'm <b>Henry Verrill</b>. <br> This is my work in progress online resume!</p>
             </div>
             <!-- The about me. This talks a bit more about myself. -->
             <div id="aboutMe" class="medium primary">
@@ -41,16 +41,6 @@
                 </div>
             </div>
             
-
-
-
-
-
-
-
-
-
-
             <!-- A photo. This one is a bit of an inside joke between my friends. 
                 To fufill the requirement for an image for the assignment -->
                 <div id="me" class="small">
