added logo to gradient bar

--- a/resume.html
+++ b/resume.html
@@ -8,8 +8,10 @@
         <link rel="icon" href="assets/favicon.png">
     </head>
     <body>
-        <nav>
-            <!-- Potentially unneeded -->
+        <nav class="bar">
+            <div>
+                <img id="logo" src="assets/logo.png" alt="a white logo with a negetive impression of an H">
+            </div>
         </nav>
         <main class="main">
             <div id="resumePage" class="big">
@@ -20,8 +22,14 @@
             </div>
         </main>
         <footer class="main">
-            <!-- also potentially unneeded -->
-            <div>You can contact me through the essence plane very easily.</div>
+            <p class="big primary"> Contact Me:</p>
+            <div id="contact" class="medium primary">
+                Cell: (678)-994-9460 <br>
+                Email: <a href="mailto:verrilhn@rose-hulman.edu">verrilhn@rose-hulman.edu</a> or <a href="mailto:hverrill@protonmail">hverrill@protonmail.com</a><br>
+                Address: <br>
+                5500 Wabash Avenue CM 2008 <br>
+                Terre Haute, Indiana 47803 <br>
+            </div>
         </footer>
         
     </body>
