made logo into home button

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <body>
         <nav class="bar">
             <div>
-                <img id="logo" src="assets/logo.png" alt="a white logo with a negetive impression of an H">
+                <a href="https://hverrill.github.io/#">
+                    <img id="logo" src="assets/logo.png" alt="H Logo. Click to navigate home."> 
+                </a>
             </div>
         </nav>
         <main class="main">
@@ -25,7 +27,7 @@
             
             <!-- Link to the resume page. May relocate. -->
             <div id="resume" class="big primary">
-                <p>Click <a href="https://hverrill.github.io/resume.html">here</a> to view my resume.</p>
+                <p>Click <a class="link" href="https://hverrill.github.io/resume.html">here</a> to view my resume.</p>
             </div>
             <div id="projects">
                 <!-- Projects Header -->
@@ -35,10 +37,10 @@
                 <!-- Projects List -->
                 <div class="medium primary">
                     <ul>
-                        <li><a href="#">Example Project 1</a></li>
-                        <li><a href="#">Example Project 2</a></li>
-                        <li><a href="#">Example Project 3</a></li>
-                        <li><a href="#">Example Project 4</a></li>
+                        <li><a class="link" href="#">Example Project 1</a></li>
+                        <li><a class="link" href="#">Example Project 2</a></li>
+                        <li><a class="link" href="#">Example Project 3</a></li>
+                        <li><a class="link" href="#">Example Project 4</a></li>
                     </ul>
                 </div>
             </div>
@@ -50,7 +52,7 @@
             <p class="big primary"> Contact Me:</p>
             <div id="contact" class="medium primary">
                 Cell: (678)-994-9460 <br>
-                Email: <a href="mailto:verrilhn@rose-hulman.edu">verrilhn@rose-hulman.edu</a> or <a href="mailto:hverrill@protonmail">hverrill@protonmail.com</a><br>
+                Email: <a class="link" href="mailto:verrilhn@rose-hulman.edu">verrilhn@rose-hulman.edu</a> or <a  class="link" href="mailto:hverrill@protonmail">hverrill@protonmail.com</a><br>
                 Address: <br>
                 5500 Wabash Avenue CM 2008 <br>
                 Terre Haute, Indiana 47803 <br>
