--- a/resume.html
+++ b/resume.html
@@ -10,7 +10,9 @@
     <body>
         <nav class="bar">
             <div>
-                <img id="logo" src="assets/logo.png" alt="a white logo with a negetive impression of an H">
+                <a href="https://hverrill.github.io/#">
+                    <img id="logo" src="assets/logo.png" alt="H Logo. Click to navigate home."> 
+                </a>
             </div>
         </nav>
         <main class="main">
