--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <p class="big primary"> Contact Me:</p>
             <div id="contact" class="medium primary">
                 Cell: (678)-994-9460 <br>
-                Email: <a class="link" href="mailto:verrilhn@rose-hulman.edu">verrilhn@rose-hulman.edu</a> or <a  class="link" href="mailto:hverrill@protonmail">hverrill@protonmail.com</a><br>
+                Email: <a class="link" href="mailto:verrilhn&#64rose-hulman.edu">verrilhn@rose-hulman.edu</a> or <a  class="link" href="mailto:hverrill&#64protonmail.com">hverrill@protonmail.com</a><br>
                 Address: <br>
                 5500 Wabash Avenue CM 2008 <br>
                 Terre Haute, Indiana 47803 <br>
