changed resume html

--- a/resume.html
+++ b/resume.html
@@ -26,12 +26,16 @@
         <footer class="main">
             <p class="big primary"> Contact Me:</p>
             <div id="contact" class="medium primary">
-                Cell: (678)-994-9460 <br>
-                Email: <a href="mailto:verrilhn@rose-hulman.edu">verrilhn@rose-hulman.edu</a> or <a href="mailto:hverrill@protonmail">hverrill@protonmail.com</a><br>
+                Cell: <b>(678)-994-9460</b> <br>
+                Email: <a class="link" href="mailto:verrilhn&#64rose-hulman.edu">verrilhn@rose-hulman.edu</a> or <a  class="link" href="mailto:hverrill&#64protonmail.com">hverrill@protonmail.com</a><br>
                 Address: <br>
                 5500 Wabash Avenue CM 2008 <br>
                 Terre Haute, Indiana 47803 <br>
             </div>
+            <p></p>
+            <p class="small primary">
+                Click the H logo in the top left to navigate home.
+            </p>
         </footer>
         
     </body>
