changed my goals

--- a/index.html
+++ b/index.html
@@ -44,9 +44,10 @@
                     write a Sci-Fi/Fantasy book myself.
                 </p>
                 <p>
-                    My goal in life is to live happily while having a positive impact on the world. Ideally, I want to 
-                    solve the problem with modern social media platforms, and maybe solve some internet privacy issues 
-                    too.
+                    My goal in life is to live <b>happily</b> while having a <b>positive impact</b> on the world. Ideally, 
+                    I want to solve the problem with modern social media platforms, and maybe solve some internet privacy 
+                    issues too. The best way I see to do this is to either join a great company in the industry, or start 
+                    my own buisness and be the change I want to see
                 </p>
                      
                     
