added top class for correct spacing

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             </div>
         </nav>
 
-        <main class="main">
+        <main class="main top">
             <!-- The introduction. Says my name and a short one-liner -->
             <div id="intro" class="header primary">
                 <p> 
