--- a/resume.html
+++ b/resume.html
@@ -15,7 +15,7 @@
                 </a>
             </div>
         </nav>
-        <main class="main">
+        <main class="main top">
             <div id="resumePage" class="big">
                 <p>My resume</p>
             </div>
