--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
                     <img id="logo" src="assets/logo.png" alt="H Logo. Click to navigate home."> 
                 </a>
             </div>
+            <div class="dardModeSwitch">
+                <label class="rocker rocker-small">
+                    <input type="checkbox">
+                    <span class="switch-left">Light</span>
+                    <span class="switch-right">Dark</span>
+                  </label>
+            </div>
         </nav>
 
         <main class="main top">
