--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                     <img id="logo" src="assets/logo.png" alt="H Logo. Click to navigate home."> 
                 </a>
             </div>
-            <div class="dardModeSwitch">
+            <div class="dardModeSwitch mid">
                 <label class="rocker rocker-small">
                     <input type="checkbox">
                     <span class="switch-left">Light</span>
