removed toggle button temprarily

--- a/index_copy.html
+++ b/index_copy.html
@@ -16,13 +16,13 @@
                         <img class="logo" src="assets/logo.png" alt="H Logo. Click to navigate home."> 
                     </a>
                 </div>
-                <!-- <div class="darkModeSwitch col">
+                <div class="darkModeSwitch col">
                     <label class="rocker rocker-small">
                         <input type="checkbox">
                         <span class="switch-left">Light</span>
                         <span class="switch-right">Dark</span>
                     </label>
-                </div> -->
+                </div>
             </div>
             
         </nav>
@@ -71,7 +71,7 @@
                     <p>My <b>Projects</b></p>
                 </div>
                 <!-- Projects List -->
-                <div class="big secondary">
+                <div class="big primary">
                     <ul>
                         <li><a class="link" href="#">I don't have any yet so this leads nowhere</a></li>
                     </ul>
