--- a/resume.html
+++ b/resume.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Resume</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="stylesheet" href="styles/normalize.css">
         <link rel="stylesheet" href="styles/main.css">
         <link rel="icon" href="assets/favicon.png">
