--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@
             <p class="big primary"> Contact Me:</p>
             <div id="contact" class="medium primary">
                 Cell: <b>(678)-994-9460</b> <br>
-                Email: <a class="link" href="mailto:verrilhn&#64rose-hulman.edu">verrilhn@rose-hulman.edu</a> or <a  class="link" href="mailto:hverrill&#64protonmail.com">hverrill@protonmail.com</a><br>
+                Email: See Resume <br> 
+                <!-- <a class="link" href="mailto:verrilhn&#64rose-hulman.edu">verrilhn@rose-hulman.edu</a> or <a  class="link" href="mailto:hverrill&#64protonmail.com">hverrill@protonmail.com</a> -->
                 Address: <br>
                 5500 Wabash Avenue CM 2008 <br>
                 Terre Haute, Indiana 47803 <br>
