fixed logo on resume page

--- a/resume.html
+++ b/resume.html
@@ -10,10 +10,12 @@
     </head>
     <body>
         <nav class="bar">
-            <div>
-                <a href="https://hverrill.github.io/#">
-                    <img id="logo" src="assets/logo.png" alt="H Logo. Click to navigate home."> 
-                </a>
+            <div class="row">
+                <div class="col-1">
+                    <a href="https://hverrill.github.io/#">
+                        <img class="logo" src="assets/logo.png" alt="H Logo. Click to navigate home."> 
+                    </a>
+                </div>
             </div>
         </nav>
         <main class="main top">
