--- a/resume.html
+++ b/resume.html
@@ -19,8 +19,8 @@
             </div>
         </nav>
         <main class="main top">
-            <div id="resumePage" class="big">
-                <p>My resume</p>
+            <div id="resumePage" class="header">
+                <p>My <b>Resume</b> </p>
             </div>
             <div id="pdf" class="secondary">
                 <embed src="assets/resume_color.pdf" type="application/pdf" width="100%" height="800px" />
