added emails and dark mode

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
         <link rel="stylesheet" href="styles/bootstrap-material-design.min.css">
         <link rel="icon" href="assets/favicon.png">
     </head>
-    <body>
+    <body class="body">
         <nav class="bar">
             <div class="row">
                 <div class="col-1">
-                    <a href="https://hverrill.github.io/#">
+                    <a href="index.html">
                         <img class="logo" src="assets/logo.png" alt="H Logo. Click to navigate home."> 
                     </a>
                 </div>
@@ -65,7 +65,7 @@
             
             <!-- Link to the resume page. May relocate. -->
             <div id="resume" class="big primary">
-                <p>Interested in my stats? Click <a class="link" href="https://hverrill.github.io/resume.html">here</a> to view my resume.</p>
+                <p>Interested in my stats? Click <a class="link" href="resume.html">here</a> to view my resume.</p>
             </div>
             <div id="projects">
                 <!-- Projects Header -->
@@ -85,8 +85,7 @@
             <p class="big primary"> Contact Me:</p>
             <div id="contact" class="medium primary">
                 Cell: <b>(678)-994-9460</b> <br>
-                Email: See Resume <br> 
-                <!-- <a class="link" href="mailto:verrilhn&#64rose-hulman.edu">verrilhn@rose-hulman.edu</a> or <a  class="link" href="mailto:hverrill&#64protonmail.com">hverrill@protonmail.com</a> -->
+                Email: <a class="link" href="mailto:verrilhn&#64rose-hulman.edu">verrilhn (at) rose-hulman.edu</a> or <a  class="link" href="mailto:hverrill&#64protonmail.com">hverrill (at) protonmail.com</a><br> 
                 Address: <br>
                 5500 Wabash Avenue CM 2008 <br>
                 Terre Haute, Indiana 47803 <br>
