--- a/resume.html
+++ b/resume.html
@@ -8,11 +8,11 @@
         <link rel="stylesheet" href="styles/main.css">
         <link rel="icon" href="assets/favicon.png">
     </head>
-    <body>
+    <body class="body">
         <nav class="bar">
             <div class="row">
                 <div class="col-1">
-                    <a href="https://hverrill.github.io/#">
+                    <a href="index.html">
                         <img class="logo" src="assets/logo.png" alt="H Logo. Click to navigate home."> 
                     </a>
                 </div>
@@ -30,7 +30,7 @@
             <p class="big primary"> Contact Me:</p>
             <div id="contact" class="medium primary">
                 Cell: <b>(678)-994-9460</b> <br>
-                Email: <a class="link" href="mailto:verrilhn&#64rose-hulman.edu">verrilhn@rose-hulman.edu</a> or <a  class="link" href="mailto:hverrill&#64protonmail.com">hverrill@protonmail.com</a><br>
+                Email: <a class="link" href="mailto:verrilhn&#64rose-hulman.edu">verrilhn (at) rose-hulman.edu</a> or <a  class="link" href="mailto:hverrill&#64protonmail.com">hverrill (at) protonmail.com</a><br> 
                 Address: <br>
                 5500 Wabash Avenue CM 2008 <br>
                 Terre Haute, Indiana 47803 <br>
