--- a/resume.html
+++ b/resume.html
@@ -12,7 +12,7 @@
         <nav class="bar">
             <div class="row">
                 <div class="col-1">
-                    <a href="index.html">
+                    <a href="hverrill.github.io">
                         <img class="logo" src="assets/logo.png" alt="H Logo. Click to navigate home."> 
                     </a>
                 </div>
