--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <!-- The introduction. Says my name and a short one-liner -->
             <div id="intro" class="header primary">
                 <p> 
-                    Hello! 👋 I'm <b>Henry Verrill</b>. <br> 
+                    Hello! <span class="emoji">👋</span>  I'm <b>Henry Verrill</b>. <br> 
                     This is my website. Learn about me or see what I can do!
                 </p>
             </div>
