found the problem

--- a/index.html
+++ b/index.html
@@ -100,6 +100,6 @@
         
     </body>
     <script src="scripts/bootstrap-material-design.js"></script>
-    <script src="public/scripts/main.js"></script>
+    <script src="scripts/main.js"></script>
     <style></style>
 </html>
