--- a/resume.html
+++ b/resume.html
@@ -42,6 +42,6 @@
         </footer>
         
     </body>
-    <script src="public/scripts/main.js"></script>
+    <script src="scripts/main.js"></script>
     <style></style>
 </html>
