removed resume page, instead the link downloads it

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             
             <!-- Link to the resume page. May relocate. -->
             <div id="resume" class="big primary">
-                <p>Interested in my stats? Click <a class="link" href="resume.html">here</a> to view my resume.</p>
+                <p>Interested in my stats? Click <a class="link" href="assets/resume_color.pdf">here</a> to view my resume.</p>
             </div>
             <div id="projects">
                 <!-- Projects Header -->
@@ -93,9 +93,6 @@
                 <img src="assets/me_big.png" alt="a funny hand-drawn, black and white head">
                 <!-- credit to my friend Alex Papageorge for the great picture! -->
             </div>
-            <p class="small primary">
-                Click the H logo in the top left to navigate home.
-            </p>
         </footer>
         
     </body>
