created project cards

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     My goal in life is to live <b>happily</b> while having a <b>positive impact</b> on the world. Ideally, 
                     I want to solve the problem with modern social media platforms, and maybe solve some internet privacy 
                     issues too. The best way I see to do this is to either join a great company in the industry, or start 
-                    my own buisness and be the change I want to see.
+                    my own business and be the change I want to see.
                 </p> 
             </div>
             
@@ -66,10 +66,46 @@
                     <p>My <b>Projects</b></p>
                 </div>
                 <!-- Projects List -->
-                <div class="big secondary">
-                    <ul>
-                        <li><a class="link" href="#">I don't have any yet so this leads nowhere</a></li>
-                    </ul>
+                <div class="big wide" id="projectTileList">
+                    <a href="#" class="projectCard">
+                        <div class="card" href="#">
+                            <img class="card-img-top" src="assets/me_big.png" alt="Card image cap">
+                            <div class="card-body">
+                              <h5 class="card-title">A project of mine</h5>
+                              <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                            </div>
+                        </div>
+                    </a>
+
+                    <a href="#" class="projectCard">
+                        <div class="card" href="#">
+                            <img class="card-img-top" src="assets/me_big.png" alt="Card image cap">
+                            <div class="card-body">
+                              <h5 class="card-title">A project of mine</h5>
+                              <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                            </div>
+                        </div>
+                    </a>
+                    
+                    <a href="#" class="projectCard">
+                        <div class="card" href="#">
+                            <img class="card-img-top" src="assets/me_big.png" alt="Card image cap">
+                            <div class="card-body">
+                              <h5 class="card-title">A project of mine</h5>
+                              <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                            </div>
+                        </div>
+                    </a>
+
+                    <a href="#" class="projectCard">
+                        <div class="card" href="#">
+                            <img class="card-img-top" src="assets/me_big.png" alt="Card image cap">
+                            <div class="card-body">
+                              <h5 class="card-title">A project of mine</h5>
+                              <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                            </div>
+                        </div>
+                    </a>
                 </div>
             </div>
         </main>
