flexbox is annoying

--- a/index.html
+++ b/index.html
@@ -114,23 +114,13 @@
             <p class="big primary"> Contact Me:</p>
             <div id="contact" class="medium primary">
                 Cell: <b>(678)-994-9460</b> <br>
-                Email: <a class="link" href="mailto:verrilhn&#64rose-hulman.edu">verrilhn (at) rose-hulman.edu</a> or <a  class="link" href="mailto:hverrill&#64protonmail.com">hverrill (at) protonmail.com</a><br> 
+                School Email: <a class="link" href="mailto:verrilhn&#64rose-hulman.edu">verrilhn (at) rose-hulman.edu</a><br>
+                Personal Email: <a  class="link" href="mailto:hverrill&#64protonmail.com">hverrill (at) protonmail.com</a><br> 
                 Address: <br>
                 5500 Wabash Avenue CM 2008 <br>
                 Terre Haute, Indiana 47803 <br>
             </div>
-            <p></p>
-
-            <!-- A photo. This one is a bit of an inside joke between my friends. 
-            To fufill the requirement for an image for the assignment. The picture's 
-            name is literally "Me"-->
-            <div id="me" class="small primary">
-                <p>Here's a flattering photo of someone who may or may not be me...</p>
-                <img src="assets/me_big.png" alt="a funny hand-drawn, black and white head">
-                <!-- credit to my friend Alex Papageorge for the great picture! -->
-            </div>
         </footer>
-        
     </body>
     <script src="scripts/bootstrap-material-design.js"></script>
     <script src="scripts/main.js"></script>
