added background static and calibri light font

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
         <title>Henry Verrill's Website</title>
         
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="styles/normalize.css">
         <link rel="stylesheet" href="styles/main.css">
         <link rel="stylesheet" href="styles/bootstrap-material-design.min.css">
@@ -23,6 +27,7 @@
         </nav>
 
         <main class="main top">
+            <div class="bg"></div>
             <!-- The introduction. Says my name and a short one-liner -->
             <div id="intro" class="header primary">
                 <p> 
