--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
             
         </nav>
 
-        <main class="main top">
+        <main class="main" id="top">
             
             <!-- The introduction. Says my name and a short one-liner -->
             <div id="intro" class="header primary">
                 <p> 
-                    Hello! <span id="emoji">👋</span>  I'm <b>Henry Verrill</b>. <br> 
+                    Hello! <span id="emoji">👋</span>  I'm Henry Verrill. <br> 
                     This is my website. Learn about me or see what I can do!
                 </p>
             </div>
@@ -39,7 +39,7 @@
             <div id="aboutMe" class="medium primary">
                 <p>
                     I'm a 19 year old college student majoring in Software Engineering 
-                    at <b>Rose-Hulman Institute of Technology</b>. I'll graduate in 2024.
+                    at Rose-Hulman Institute of Technology. I'll graduate in 2024.
                 </p>
                 <p>
                     I'm a <a class="link" href="https://www.theminimalists.com/minimalism/">minimalist</a>, and I love 
@@ -54,7 +54,7 @@
                     write a Sci-Fi/Fantasy book myself.
                 </p>
                 <p>
-                    My goal in life is to live <b>happily</b> while having a <b>positive impact</b> on the world. Ideally, 
+                    My goal in life is to live happily while having a positive impact on the world. Ideally, 
                     I want to solve the problem with modern social media platforms, and maybe solve some internet privacy 
                     issues too. The best way I see to do this is to either join a great company in the industry, or start 
                     my own business and be the change I want to see.
@@ -68,10 +68,10 @@
             <div id="projects">
                 <!-- Projects Header -->
                 <div class="header primary"> 
-                    <p>My <b>Projects</b></p>
+                    <p>My Projects</p>
                 </div>
                 <!-- Projects List -->
-                <div class="big wide" id="projectTileList">
+                <div class="big wide" id="projectCardList">
                     <a href="#" class="projectCard">
                         <div class="card" href="#">
                             <img class="card-img-top" src="assets/nebula.jpg" alt="Card image cap">
