comments and cleanup

--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
                     my own business and be the change I want to see.
                 </p> 
             </div>
-            
             <!-- Link to the resume page. May relocate. -->
             <div id="resume" class="big primary">
                 <p>Interested in my stats? Click <a class="link" href="assets/resume_color.pdf">here</a> to view my resume.</p>
             </div>
+            <!-- Projects Section. May make it's own page at some point; -->
             <div id="projects">
                 <!-- Projects Header -->
                 <div class="header primary"> 
