added first real project!

--- a/index.html
+++ b/index.html
@@ -73,12 +73,12 @@
                 <div class="big" id="projectCardList">
                     <!-- Column 1 -->
                     <div class="column">
-                        <a href="#" class="projectCard">
+                        <a href="https://mega.nz/folder/OnIAiJCK#du_N3G-J9C5QHWTt4_VfPw" class="projectCard">
                             <div class="card" href="#">
-                                <img class="card-img-top" src="assets/galaxy.jpg" alt="Card image cap">
+                                <img class="card-img-top" src="assets/graph2.png" alt="Card image cap">
                                 <div class="card-body">
-                                  <h5 class="card-title">Cool Galaxy</h5>
-                                  <p class="card-text">ZOOOOOOOOOOOOM dolor sit amet consectetur adipisicing elit.</p>
+                                  <h5 class="card-title">A* Graph Pathfinder Project</h5>
+                                  <p class="card-text">In skyrim, instantly find the best path to your destination!</p>
                                 </div>
                             </div>
                         </a>
