--- a/index.html
+++ b/index.html
@@ -71,69 +71,61 @@
                 </div>
                 <!-- Projects List -->
                 <div class="big" id="projectCardList">
-                    <!-- Column 1 -->
-                    <div class="column">
-                        <a href="https://mega.nz/folder/OnIAiJCK#du_N3G-J9C5QHWTt4_VfPw" class="projectCard">
-                            <div class="card" href="#">
-                                <img class="card-img-top" src="assets/graph2.png" alt="Card image cap">
-                                <div class="card-body">
-                                  <h5 class="card-title">A* Graph Pathfinder Project</h5>
-                                  <p class="card-text">In skyrim, instantly find the best path to your destination!</p>
-                                </div>
+                    <a href="https://mega.nz/folder/OnIAiJCK#du_N3G-J9C5QHWTt4_VfPw" class="projectCard">
+                        <div class="card" href="#">
+                            <img class="card-img-top" src="assets/graph2.png" alt="Card image cap">
+                            <div class="card-body">
+                              <h5 class="card-title">A* Graph Pathfinder Project</h5>
+                              <p class="card-text">In skyrim, instantly find the best path to your destination! <br>
+                                <i>Requires Java 8</i></p>
                             </div>
-                        </a>
-                        <a href="#" class="projectCard">
-                            <div class="card" href="#">
-                                <img class="card-img-top" src="assets/test.png" alt="Card image cap">
-                                <div class="card-body">
-                                  <h5 class="card-title">VERY COOL TEST PROJECT CARD YES VERY</h5>
-                                  <p class="card-text">Bingus dolor sit amet consectetur adipisicing elit. </p>
-                                </div>
+                        </div>
+                    </a>
+                    <a href="#" class="projectCard">
+                        <div class="card" href="#">
+                            <img class="card-img-top" src="assets/test.png" alt="Card image cap">
+                            <div class="card-body">
+                              <h5 class="card-title">VERY COOL TEST PROJECT CARD YES VERY</h5>
+                              <p class="card-text">Bingus dolor sit amet consectetur adipisicing elit. </p>
                             </div>
-                        </a>
-                    </div>
-                    <!-- Column 2 -->
-                    <div class="column">
-                        <a href="#" class="projectCard">
-                            <div class="card" href="#">
-                                <img class="card-img-top" src="assets/elon.jpg" alt="Card image cap">
-                                <div class="card-body">
-                                  <h5 class="card-title">A project of mine</h5>
-                                  <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                                </div>
+                        </div>
+                    </a>
+                    <a href="#" class="projectCard">
+                        <div class="card" href="#">
+                            <img class="card-img-top" src="assets/elon.jpg" alt="Card image cap">
+                            <div class="card-body">
+                              <h5 class="card-title">A project of mine</h5>
+                              <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                             </div>
-                        </a>
-                        <a href="#" class="projectCard">
-                            <div class="card" href="#">
-                                <img class="card-img-top" src="assets/galaxy.jpg" alt="Card image cap">
-                                <div class="card-body">
-                                  <h5 class="card-title">Cool Galaxy</h5>
-                                  <p class="card-text">ZOOOOOOOOOOOOM dolor sit amet consectetur adipisicing elit.</p>
-                                </div>
+                        </div>
+                    </a>
+                    <a href="#" class="projectCard">
+                        <div class="card" href="#">
+                            <img class="card-img-top" src="assets/galaxy.jpg" alt="Card image cap">
+                            <div class="card-body">
+                              <h5 class="card-title">Cool Galaxy</h5>
+                              <p class="card-text">ZOOOOOOOOOOOOM dolor sit amet consectetur adipisicing elit.</p>
                             </div>
-                        </a>
-                        <a href="#" class="projectCard">
-                            <div class="card" href="#">
-                                <img class="card-img-top" src="assets/nebula.jpg" alt="Card image cap">
-                                <div class="card-body">
-                                  <h5 class="card-title">Nebula</h5>
-                                  <p class="card-text">A cool picture of the eagle nebula.</p>
-                                </div>
+                        </div>
+                    </a>
+                    <a href="#" class="projectCard">
+                        <div class="card" href="#">
+                            <img class="card-img-top" src="assets/nebula.jpg" alt="Card image cap">
+                            <div class="card-body">
+                              <h5 class="card-title">Nebula</h5>
+                              <p class="card-text">A cool picture of the eagle nebula.</p>
                             </div>
-                        </a>
-                    </div>
-                    <!-- Column 3 -->
-                    <div class="column">
-                        <a href="#" class="projectCard">
-                            <div class="card" href="#">
-                                <img class="card-img-top" src="assets/test.png" alt="Card image cap">
-                                <div class="card-body">
-                                  <h5 class="card-title">VERY COOL TEST PROJECT CARD YES VERY</h5>
-                                  <p class="card-text">Bingus dolor sit amet consectetur adipisicing elit. </p>
-                                </div>
+                        </div>
+                    </a>
+                    <a href="#" class="projectCard">
+                        <div class="card" href="#">
+                            <img class="card-img-top" src="assets/test.png" alt="Card image cap">
+                            <div class="card-body">
+                              <h5 class="card-title">VERY COOL TEST PROJECT CARD YES VERY</h5>
+                              <p class="card-text">Bingus dolor sit amet consectetur adipisicing elit. </p>
                             </div>
-                        </a>
-                    </div>
+                        </div>
+                    </a>
                 </div>
             </div>
             
