added second project box

--- a/index.html
+++ b/index.html
@@ -81,16 +81,16 @@
                             </div>
                         </div>
                     </a>
-                    <a href="#" class="projectCard">
+                    <a href="" class="projectCard">
                         <div class="card" href="#">
-                            <img class="card-img-top" src="assets/test.png" alt="Card image cap">
+                            <img class="card-img-top" src="assets/website.png" alt="Card image cap">
                             <div class="card-body">
-                              <h5 class="card-title">VERY COOL TEST PROJECT CARD YES VERY</h5>
-                              <p class="card-text">Bingus dolor sit amet consectetur adipisicing elit. </p>
+                              <h5 class="card-title">Personal Portfolio Website</h5>
+                              <p class="card-text">Built from scratch with a little help from bootstrap and flexbox. </p>
                             </div>
                         </div>
                     </a>
-                    <a href="#" class="projectCard">
+                    <!-- <a href="#" class="projectCard">
                         <div class="card" href="#">
                             <img class="card-img-top" src="assets/elon.jpg" alt="Card image cap">
                             <div class="card-body">
@@ -125,7 +125,7 @@
                               <p class="card-text">Bingus dolor sit amet consectetur adipisicing elit. </p>
                             </div>
                         </div>
-                    </a>
+                    </a> -->
                 </div>
             </div>
             
