added group scheduler project

--- a/index.html
+++ b/index.html
@@ -90,6 +90,16 @@
                             </div>
                         </div>
                     </a>
+                    <a href="https://rosehulmanprojectvault.org/project/-MWdqwK2GH-erjes1lsR" class="projectCard">
+                        <div class="card" href="#">
+                            <img class="card-img-top" src="assets/groupcalendar.png" alt="Card image cap">
+                            <div class="card-body">
+                              <h5 class="card-title">Group Event Scheduler</h5>
+                              <p class="card-text">A group event scheduler that averages a study group's availability for easy planning! <br>
+                                <i>Collaborated with Evan Slater</i> </p>
+                            </div>
+                        </div>
+                    </a>
                     <!-- <a href="#" class="projectCard">
                         <div class="card" href="#">
                             <img class="card-img-top" src="assets/elon.jpg" alt="Card image cap">
