--- a/index.html
+++ b/index.html
@@ -37,27 +37,14 @@
             <!-- The about me. This talks a bit more about myself. -->
             <div id="aboutMe" class="medium primary">
                 <p>
-                    I'm a 19 year old college student majoring in Software Engineering 
-                    at Rose-Hulman Institute of Technology. I'll graduate in 2024.
+                    I'm a 19 year old student majoring in Software Engineering at Rose-Hulman Institute of Technology.
                 </p>
                 <p>
-                    I'm a <a class="link" href="https://www.theminimalists.com/minimalism/">minimalist</a>, and I love 
-                    to think deeply about philosphical and societal problems.
+                    My goal is to live a happy and fulfilled life while making a positive impact on the world. I'm interested in a lot of diverse topics, including economics, philosophy, behavioral psychology, and technology.
                 </p>
                 <p>
-                    I love to play games. Magic The Gathering, Dungeons & Dragons (when I can), <a class="link" href="https://shiritorigame.com/">Shiritori</a>, 
-                    and video games like Stellaris and Minecraft come to mind.
+                    I hope to apply my love of economics and human behavior to my trade, creating products that treat users like humans rather than profits.
                 </p>
-                <p>
-                    Science fiction and fantasy books are another pastime of mine. In the future, I want to 
-                    write a Sci-Fi/Fantasy book myself.
-                </p>
-                <p>
-                    My goal in life is to live happily while having a positive impact on the world. Ideally, 
-                    I want to solve the problem with modern social media platforms, and maybe solve some internet privacy 
-                    issues too. The best way I see to do this is to either join a great company in the industry, or start 
-                    my own business and be the change I want to see.
-                </p> 
             </div>
             <!-- Link to the resume page. May relocate. -->
             <div id="resume" class="big primary">
@@ -77,6 +64,7 @@
                             <div class="card-body">
                               <h5 class="card-title">A* Graph Pathfinder Project</h5>
                               <p class="card-text">In skyrim, instantly find the best path to your destination! <br>
+                                <i class="small">Created with help from Conor Peper, Seth Marcus, and Napiwocki</i><br>
                                 <i>Requires Java 8</i></p>
                             </div>
                         </div>
@@ -96,7 +84,7 @@
                             <div class="card-body">
                               <h5 class="card-title">Group Event Scheduler</h5>
                               <p class="card-text">A group event scheduler that averages a study group's availability for easy planning! <br>
-                                <i>Collaborated with Evan Slater</i> </p>
+                                <i class="small">Created with help from Evan Slater</i></p>
                             </div>
                         </div>
                     </a>
