Added On Point Project

--- a/index.html
+++ b/index.html
@@ -88,6 +88,17 @@
                             </div>
                         </div>
                     </a>
+                    <a href="https://github.com/Rosebotics/catapult2019/tree/master/projects/Henry_Tyler" class="projectCard">
+                        <div class="card" href="#">
+                            <img class="card-img-top" src="assets/onpoint.png" alt="Card image cap">
+                            <div class="card-body">
+                              <h5 class="card-title">On Point - Reaction Game</h5>
+                              <p class="card-text">Python game created from scratch in 2 weeks with no prior python experience. <br>
+                                This game is all about rhythm, timing, and matching in order to get the highest score! <br>
+                                <i class="small">Created with help from Tyler Kessis at Operation Catapult 2019</i></p>
+                            </div>
+                        </div>
+                    </a>
                     <!-- <a href="#" class="projectCard">
                         <div class="card" href="#">
                             <img class="card-img-top" src="assets/elon.jpg" alt="Card image cap">
@@ -126,7 +137,6 @@
                     </a> -->
                 </div>
             </div>
-            
         </main>
 
         <footer>
