added newest project, airports of the world

--- a/index.html
+++ b/index.html
@@ -99,6 +99,19 @@
                             </div>
                         </div>
                     </a>
+                    <a href="https://github.com/rhit-loafmant/CSSE-230-Group-2-Final-Project" class="projectCard">
+                        <div class="card" href="#">
+                            <img class="card-img-top" src="assets/teamflatearth.png" alt="Card image cap">
+                            <div class="card-body">
+                              <h5 class="card-title">Airports of the World!</h5>
+                              <p class="card-text">A graph-based pathfinding algorithm that uses Dijkstra's algorithm 
+                                combined with a geometrically spherical distance algorithm to make a truly ironic application!<br>
+                                <i class="small">Created with help from Jaden Rigg, Nathan Loafman, and small part from Kaileb White.</i><br>
+                                <i class="small">*for more context, our team name was Team Flat Earth</i><br>
+                                <i>Requires Java 8</i></p>
+                            </div>
+                        </div>
+                    </a>
                     <!-- <a href="#" class="projectCard">
                         <div class="card" href="#">
                             <img class="card-img-top" src="assets/elon.jpg" alt="Card image cap">
