--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                             <div class="card-body">
                               <h5 class="card-title">Airports of the World!</h5>
                               <p class="card-text">A graph-based pathfinding algorithm that uses Dijkstra's algorithm 
-                                combined with a geometrically spherical distance algorithm to make a truly ironic application!<br>
+                                combined with a geometrically spherical distance method to make a truly ironic* application!<br>
                                 <i class="small">Created with help from Jaden Rigg, Nathan Loafman, and small part from Kaileb White.</i><br>
                                 <i class="small">*for more context, our team name was Team Flat Earth</i><br>
                                 <i>Requires Java 8</i></p>
